--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hands-On PCB Engineering
-tagline: Berkeley Hands-On PCB Engineering (HOPE)
-description: Course that teaches you a lot about stuff
-author: Kaelan Yim
+title: EECS151 Tapeout (EECS151T)
+tagline: The Berkeley IEEE student branch's EECS151 tapeout decal
+description: Get hands-on with SoC design :3
+author: Elam and Lucy
 # baseurl: '' # the subpath of your site, e.g. /blog
 url: 'https://ieee.github.io' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE"]
