--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: EECS151 Tapeout (EECS151T)
+title: EECS151 Tapeout
 tagline: The Berkeley IEEE student branch's EECS151 tapeout decal
 description: Get hands-on with SoC design :3
 author: Elam and Lucy
