--- a/_data/labs.yml
+++ b/_data/labs.yml
@@ -69,15 +69,42 @@
 #     - schedule-purple
 
 labs:
-  - title: "Lab 1"
-    link: "/proj1/"
-    due: "09/06"
+  - nonumber: true
+  - title: "Lab 0, 1A, 1B"
+    link: "https://github.com/ucb-eecs151tapeout/eecs151t-labs/"
+    due: "09/26" 
     parts:
-      - name: "Part A"
-        link: "/proj1/part-a"
-      - name: "Part B"
-        link: "/proj1/part-b"
-    extra: "[Special PDF](https://www.google.com)"
-    classes:
-      - proj1 # adds the purple background
+      - name: "Practical introduction to Git and Chisel. Test instructional account and Chipyard setup."
+    # extra: "[Special PDF](https://www.google.com)"
+    # classes:
+    #   - proj1 # adds the purple background
+  - title: "Lab 2 (A, B, C, optional: X)"
+    link: "https://github.com/ucb-eecs151tapeout/eecs151t-labs/"
+    due: "10/03" 
+    parts: 
+      - name: "Practical Chipyard intro. Step by step integration of EECS151 RISC-V core."
+  - title: "Lab 3"
+    link: "https://github.com/ucb-eecs151tapeout/eecs151t-labs/"
+    due: "10/10" 
+    parts:
+      - name: "Chipyard exploration to motivate starting own side projects."
+  - nonumber: true
+  - nonumber: true
+  - nonumber: true
+  - nonumber: true
+  # rowspan: 4
+  - title: "Lab 4"
+    link: "https://github.com/ucb-eecs151tapeout/eecs151t-labs/"
+    due: "TODO" 
+    parts:
+      - name: "Practical experience verifying OFO Tile and side project."
+  - nonumber: true
+  - title: "Lab 5"
+    link: "https://github.com/ucb-eecs151tapeout/eecs151t-labs/"
+    due: "Due on tapeout deadline (prioritize tapeout if you're working on it) " 
+    parts:
+      - name: "Practical experience running PD. Preliminary numbers for projects."
+  - nonumber: true
+  - nonumber: true
+  - nonumber: true
   - nonumber: true
