--- a/_data/syllabus.yml
+++ b/_data/syllabus.yml
@@ -6,8 +6,8 @@
 # Due to time zone issues, these might not show up exactly on the calendar,
 # so some fiddling is necessary. If you're struggling with time zone issues,
 # try setting your system time to GMT when building the website.
-start_date: 2025-01-23
-end_date: 2025-02-21
+start_date: 2025-09-12
+end_date: 2025-12-19
 
 # Any other days you want to appear on the calendar (e.g. for one-time events
 # like exams or bonus lectures) can be listed here.
@@ -15,13 +15,13 @@ end_date: 2025-02-21
 # so some fiddling is necessary. If you're struggling with time zone issues,
 # try setting your system time to GMT when building the website.
 extra_days:
- - date: 2025-02-12
+ - date: 2025-09-5
 
 # The days of the week we have class on. Ranges from Sunday = 0 and Saturday = 6.
 # For example, for a semester with Tu/Th lectures, put ['2', '4'].
 # For example, for a semester with MWF lectures, put ['1', '3', '5'].
 # For example, for a summer semester, put ['1', '2', '3', '4'].
-class_days: ['2', '4']
+class_days: ['5']
 
 
 #######################################################
@@ -35,15 +35,15 @@ class_days: ['2', '4']
 # You may not need all of these. If your readings are external links and not
 # PDFs in the repo, then "starting_readings_number" is irrelevant.
 # If you don't have labs, then "starting_lab_number" is irrelevant.
-starting_lecture_number: '1'
+starting_lecture_number: '0'
 starting_readings_number: '1'
 starting_discussion_number: '0'
 starting_homework_number: '1'
-starting_lab_number: '1'
+starting_lab_number: '0'
 starting_project_number: '1'
 # Is the first week of class Week 0 or Week 1? We currently don't support
 # starting at any other week number, so pick '0' or '1' here.
-starting_week_number: '1'
+starting_week_number: '0'
 
 # Change this if you want multiple lecture/discussion/etc boxes on the same day.
 # All the other rowspans must be relative to the day rowspan, e.g. a homework 
@@ -63,7 +63,7 @@ default_readings_rowspan: '1'
 default_discussion_rowspan: '2'
 # Similar reasoning to discussion, assuming your homeworks/labs are weekly.
 default_homework_rowspan: '2'
-default_lab_rowspan: '4'
+default_lab_rowspan: '1'
 # Project rowspans are too variable, so we just set the default to 1 and
 # never use the default (always manually specifying the rowspan).
 default_project_rowspan: '1'
@@ -92,6 +92,6 @@ date_width: "7%"
 lecture_width: "28%"
 readings_width: "0%" # unused by default, see syllabus.html to use this
 discussion_width: "28%"
-labs_width: "0%" # unused by default, see syllabus.html to use this
+labs_width: "20%" # unused by default, see syllabus.html to use this
 homework_width: "15%"
 project_width: "15%"
