--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -114,8 +114,9 @@ lectures:
     #     link: "https://textbook.cs161.org/memory-safety/vulnerabilities.html"
     # extra: "[Sample extra link](https://google.com)"
   - title: "SoC Peripherals"
+  	slides: "https://docs.google.com/presentation/d/1roZ63lv0KeLV7Jf_4vZ-UKwCxLSdVIGA"
     # nonumber: true # skips assigning a number to this box
-  - title: "Surprise! (Stay tuned~) :3"
+  - title: "Work Session"
   - title: "Midterm Student Presentations. Make sure we’re _all_ on the same page regarding who’s aiming to do what before RTL Freeze."
     # slides: "https://docs.google.com/presentation/d/1gYzYu-T0ymaVcH87-mlCPc7qnRmWacHpKebCentDjoM"
     classes:
