--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -167,7 +167,7 @@ lectures:
     #     link: "https://textbook.cs161.org/crypto/intro.html"
     # classes:
     #   - schedule-red
-  - title: "Guest Lecture - more info to come!"
+  - title: "Guest Lecture: The Life of a Memory Request by Mukul Joshi from Nvidia"
     # video: "https://www.youtube.com/playlist?list=PLnp31xXvnfRqyuN_xxm4o1Woa44dXW_N8"
     # slides: "https://docs.google.com/presentation/d/1CnAthtm-3sjX8d3rJiedRVVAmFIyj_4z4kQ2gNg7074"
     # recording: "https://www.youtube.com/playlist?list=PLfBkt1-_BHX_1xFvNccJVTpadyTgErwbD"
