--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -169,7 +169,7 @@ lectures:
     #   - schedule-red
   - title: "Guest Lecture: The Life of a Memory Request by Mukul Joshi from Nvidia"
     # video: "https://www.youtube.com/playlist?list=PLnp31xXvnfRqyuN_xxm4o1Woa44dXW_N8"
-    # slides: "https://docs.google.com/presentation/d/1CnAthtm-3sjX8d3rJiedRVVAmFIyj_4z4kQ2gNg7074"
+    slides: "https://drive.google.com/file/d/1XFJK2-S8Pr4fwGpH3USR87oOfGBXYdce/view?usp=drive_link"
     # recording: "https://www.youtube.com/playlist?list=PLfBkt1-_BHX_1xFvNccJVTpadyTgErwbD"
     # readings:
     #   - name: "Ch. 5"
